--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
 <li>irrigation technologies</li>
 <li>chemical pest control</li>
 </ul>
-<center><img src=6.jpg"></center>
+<center><img src=6."jpg"></center>
     </body>
 </html>
