--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <style>
     h1{
-      color :green ;
-      background-color : chocolate;
-      border:10px dotted skyblue;
+      color :brown;
+      background-color : yellow;
+      border:10px solid green;
       text-align :center;
       font-size: 50px ;
     }
@@ -16,6 +16,7 @@
     h2{
       color:turquoise ;
       font-size: 30px;
+      background-color:pink;
     }
     p{
       font-family :courier ;
