--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     h2{
       color:turquoise ;
       font-size: 30px;
-      background-color:pink;
+      background-color: darkpink;
     }
     p{
       font-family :courier ;
