--- a/index.html
+++ b/index.html
@@ -85,5 +85,7 @@
 <li>chemical pest control</li>
 </ul>
 <center><img src="6.jpg"></center>
+<h3 style="font-size:50px;color:blue">More Information </h3>
+<button>back to main page</button>
     </body>
 </html>
