--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
 </ul>
 <center><img src="6.jpg"></center>
 <h3 style="font-size:50px;color:blue">More Information </h3>
-<button>back to main page</button>
+<button><a href=" https://lalithapagadala.github.io/projecthtml/" >back to main page</a></button>
     </body>
 </html>
